--- a/styles/styles.css
+++ b/styles/styles.css
@@ -48,7 +48,7 @@
   --button-font-weight: 500;
 
   /* nav height */
-  --nav-height: 64px;
+  --nav-height: 74px;
 }
 
 /* fallback fonts */
